tests/cases/fail/class_duplicate_field.p4
class Point:
    x: int
    x: int

def main() -> None:
    print("bad")
